--- a/proj1.cbp
+++ b/proj1.cbp
@@ -34,10 +34,12 @@
 		</Compiler>
 		<Unit filename="src/Currency.cpp" />
 		<Unit filename="src/Currency.h" />
-		<Unit filename="src/main.cpp" />
+		<Unit filename="src/CurrencyTests.cpp" />
+		<Unit filename="src/tests_main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
