--- a/proj1.cbp
+++ b/proj1.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DDEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -34,6 +35,7 @@
 		</Compiler>
 		<Unit filename="src/Currency.cpp" />
 		<Unit filename="src/Currency.h" />
+		<Unit filename="src/CurrencyOperators.h" />
 		<Unit filename="src/CurrencyTests.cpp" />
 		<Unit filename="src/tests_main.cpp" />
 		<Extensions>
